--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.0.5",
+    "gulp-livereload": "^3.8.1",
     "lite-server": "^1.3.1",
     "typescript": "^1.8.0"
   }
