--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
+    "http-server": "^0.9.0",
     "lite-server": "^1.3.1",
     "typescript": "^1.8.0"
   }
