--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "zone.js": "0.5.10"
   },
   "devDependencies": {
+    "colors": "^1.1.2",
     "concurrently": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
     "http-server": "^0.9.0",
     "lite-server": "^1.3.1",
+    "mime": "^1.3.4",
     "typescript": "^1.8.0"
   }
 }
