--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "http-server": "^0.9.0",
     "lite-server": "^1.3.1",
     "mime": "^1.3.4",
-    "typescript": "^1.8.0"
+    "typescript": "^1.8.0",
+    "angular2-localstorage": "~0.1.0",
+    "angular2-local-storage": "~0.2.0"
   }
 }
