--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "zone.js": "0.5.10"
   },
   "devDependencies": {
+    "angular2-local-storage": "~0.2.0",
+    "angular2-localstorage": "~0.1.0",
     "colors": "^1.1.2",
     "concurrently": "^1.0.0",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
     "http-server": "^0.9.0",
     "lite-server": "^1.3.1",
     "mime": "^1.3.4",
-    "typescript": "^1.8.0",
-    "angular2-localstorage": "~0.1.0",
-    "angular2-local-storage": "~0.2.0"
+    "typescript": "^1.8.0"
   }
 }
