--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "suppressImplicitAnyIndexErrors": true
+    "noImplicitAny": false
   },
   "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
+    "node_modules"
   ]
 }
