--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-quickstart",
+  "name": "atlas-angular2",
   "version": "1.0.0",
   "scripts": {
     "_start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -27,6 +27,9 @@
     "angular2-in-memory-web-api": "0.0.15",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "gulp": "^3.9.1",
+    "gulp-jade": "^1.1.0",
+    "merge-stream": "^1.0.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "socket.io": "^1.6.0",
