--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "_start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "start": "concurrently \"npm run gulpDev\" \"npm run server\"  ",
     "server": "node server.js",
-    "gulpDev": "gulp",
+    "gulpDev": "node_modules/.bin/gulp",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
