--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.3.0",
+    "gulp-plumber-notifier": "0.0.3",
+    "gulp-sync": "^0.1.4",
     "merge-stream": "^1.0.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
