--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "0.0.15",
+    "angular-in-memory-web-api": "~0.1.15",
+    "systemjs": "0.19.40",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.26",
+
+
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "merge-stream": "^1.0.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
     "socket.io": "^1.6.0",
     "socket.io-client": "^1.7.1",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
