--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gulp-jade": "^1.1.0",
     "merge-stream": "^1.0.1",
     "socket.io": "^1.6.0",
-    "socket.io-client": "^1.7.1",
+    "socket.io-client": "^1.7.1"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
