--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
+    "Promise": "^1.0.5",
     "angular-in-memory-web-api": "~0.1.15",
     "angular2-in-memory-web-api": "0.0.15",
     "bootstrap": "^3.3.6",
@@ -36,7 +37,7 @@
     "gulp-sync": "^0.1.4",
     "merge-stream": "^1.0.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-beta.12",
     "socket.io": "^1.6.0",
     "socket.io-client": "^1.7.1",
     "systemjs": "^0.19.40",
