--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,5 @@ node_modules/*
 !/node_modules/rxjs/add/operator/toPromise.js.map
 !/node_modules/rxjs/observable/forkJoin.js.map
 !/node_modules/rxjs/observable/ForkJoinObservable.js.map
+!/node_modules/socket.io/*
+
