--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "concurrently": "^2.0.0",
     "es6-promise": "^3.2.1",
+    "express-livereload": "0.0.24",
     "lite-server": "^2.2.0",
     "reflect-metadata": "^0.1.3",
     "typescript": "^1.8.10",
