--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,5 @@ node_modules/*
 !/node_modules/rxjs/observable/ForkJoinObservable.js.map
 !/node_modules/socket.io/*
 !/node_modules/socket.io-client/*
+!/node_modules/ramda/dist/ramda.min.js
 
