--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-plumber-notifier": "0.0.3",
     "gulp-sync": "^0.1.4",
     "merge-stream": "^1.0.1",
+    "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
     "rxjs": "5.0.0-beta.6",
     "socket.io": "^1.6.0",
