--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "^0.0.15",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.3.0",
@@ -41,6 +43,8 @@
     "socket.io-client": "^1.7.1",
     "socket.io-stream": "^0.9.1",
     "systemjs": "^0.19.40",
+    "xml2js": "^0.4.17",
+    "xmlbuilder": "^8.2.2",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
