--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-in-memory-web-api": "^0.0.15",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
+    "concurrently": "^2.2.0",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
