--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^3.3.6",
     "concurrently": "^2.2.0",
     "core-js": "^2.4.1",
+    "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
     "gulp": "^3.9.1",
