--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,9 @@
     "rootDir": "./src",
     "outDir": "dist/"
   },
-
-
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "server"
   ]
 }
