--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-less": "^3.3.0",
     "gulp-plumber-notifier": "0.0.3",
     "gulp-sync": "^0.1.4",
+    "jimp": "^0.2.27",
     "merge-stream": "^1.0.1",
     "mysql": "^2.12.0",
     "ramda": "^0.22.1",
