--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/http": "^2.0.0-rc.5",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
+    "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "^0.0.15",
@@ -37,6 +37,7 @@
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.3.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-plumber-notifier": "0.0.3",
     "gulp-sync": "^0.1.4",
     "jimp": "^0.2.27",
