--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "socket.io-stream": "^0.9.1",
     "systemjs": "^0.19.40",
     "xml2js": "^0.4.17",
-    "xmlbuilder": "^8.2.2",
-    "zone.js": "^0.6.26"
+    "xmlbuilder": "^8.2.2"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
