--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "^0.0.15",
+    "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
     "concurrently": "^2.2.0",
@@ -34,6 +35,7 @@
     "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
+    "firebase": "^3.6.6",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.3.0",
@@ -51,7 +53,8 @@
     "socket.io-stream": "^0.9.1",
     "systemjs": "^0.19.40",
     "xml2js": "^0.4.17",
-    "xmlbuilder": "^8.2.2"
+    "xmlbuilder": "^8.2.2",
+    "zone": "^0.7.4"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
