--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "systemjs": "^0.19.40",
     "xml2js": "^0.4.17",
     "xmlbuilder": "^8.2.2",
-    "zone": "0.7.4"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
