--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server-dev": "node-dev server/index.js",
     "gulpDev": "node_modules/.bin/gulp",
     "lite": "lite-server",
-    "postinstall": "typings install",
+    "_postinstall": "typings install",
     "tsc": "node_modules/.bin/tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
