--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "tsc:w": "tsc -w",
     "typings": "typings"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Maxislav/Atlas-Angular2"
+  },
   "license": "ISC",
   "dependencies": {
     "@angular/common": "^2.0.0-rc.5",
     "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
+    "@angular/core": "^2.4.4",
     "@angular/forms": "^0.3.0",
-    "@angular/http": "^2.0.0-rc.5",
+    "@angular/http": "^2.4.4",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
-    "angular2-in-memory-web-api": "^0.0.15",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.6",
@@ -47,7 +50,7 @@
     "mysql": "^2.12.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.0.1",
     "socket.io": "^1.6.0",
     "socket.io-client": "^1.7.1",
     "socket.io-stream": "^0.9.1",
