--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "mysql": "^2.12.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
-    "rxjs": "^5.0.1",
+    "rxjs": "5.0.3",
     "socket.io": "^1.6.0",
     "socket.io-client": "^1.7.1",
     "socket.io-stream": "^0.9.1",
@@ -54,20 +54,22 @@
     "zone.js": "0.7.4"
   },
   "devDependencies": {
+    "concurrently": "^2.0.0",
+    "connect-livereload": "^0.6.0",
+    "es6-promise": "^3.2.1",
+    "express-livereload": "0.0.24",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.3.0",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber-notifier": "0.0.3",
     "gulp-sync": "^0.1.4",
-    "concurrently": "^2.0.0",
-    "connect-livereload": "^0.6.0",
-    "es6-promise": "^3.2.1",
-    "express-livereload": "0.0.24",
     "lite-server": "^2.2.0",
     "node-dev": "^3.1.3",
     "reflect-metadata": "^0.1.9",
     "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "typings": "^1.0.4",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
