--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
+    "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.6",
@@ -44,7 +45,7 @@
     "mysql": "^2.12.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
-    "rxjs": "5.0.3",
+    "rxjs": "^5.0.3",
     "socket.io": "^1.6.0",
     "socket.io-client": "^1.7.1",
     "socket.io-stream": "^0.9.1",
