--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
+    "@types/node": "^7.0.5",
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
@@ -56,6 +57,7 @@
     "zone.js": "0.7.4"
   },
   "devDependencies": {
+    "@types/node": "^7.0.5",
     "concurrently": "^2.0.0",
     "connect-livereload": "^0.6.0",
     "es6-promise": "^3.2.1",
