--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "rootDir": "./src",
     "outDir": "dist/",
     "typeRoots": [
-      "node_modules/@types/"
+      "./node_modules/@types/index.d.ts"
     ]
 
   },
