--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
     "firebase": "^3.6.6",
+    "form-data": "^2.1.2",
     "jimp": "^0.2.27",
     "merge-stream": "^1.0.1",
     "mysql": "^2.12.0",
