--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
+    "@ngx-translate/core": "^6.0.0",
+    "@ngx-translate/http-loader": "0.0.3",
     "@types/node": "^7.0.5",
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
@@ -45,6 +47,7 @@
     "jimp": "^0.2.27",
     "merge-stream": "^1.0.1",
     "mysql": "^2.12.0",
+    "ng2-translate": "^5.0.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
     "rxjs": "^5.0.3",
