--- a/package.json
+++ b/package.json
@@ -71,11 +71,25 @@
     "gulp-plumber-notifier": "0.0.3",
     "gulp-sync": "^0.1.4",
     "lite-server": "^2.2.0",
+    "mocha": "^3.2.0",
     "node-dev": "^3.1.3",
     "reflect-metadata": "^0.1.9",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "async": "^2.0.1",
+    "chai": "^3.5.0",
+    "inquirer": "^1.1.3",
+    "keysim": "^2.0.0",
+    "minimist": "^1.2.0",
+    "needle": "^1.0.0",
+    "nightmare": "^2.5.2",
+    "pg": "^4.5.5",
+    "pg-monitor": "^0.5.5",
+    "pg-promise": "^4.3.5",
+    "prompt": "^1.0.0",
+    "ramda": "^0.21.0",
+    "yadda": "^0.17.10"
   }
 }
