--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.4.4",
-    "@angular/forms": "^0.3.0",
-    "@angular/http": "^2.4.4",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.2",
+
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "@types/node": "^7.0.5",
+
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+
+
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
