--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
   },
   "license": "ISC",
   "dependencies": {
-
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "@types/node": "^7.0.5",
-
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/core": "~4.0.0",
@@ -33,8 +28,10 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
-
-
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
+    "@types/node": "^7.0.5",
+    "aes-js": "^3.1.0",
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
