--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "merge-stream": "^1.0.1",
     "mysql": "^2.12.0",
     "ng2-translate": "^5.0.0",
+    "passport-facebook": "^2.1.1",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
     "rxjs": "^5.0.3",
