--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "_start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\"  ",
-    "__start": "concurrently \"npm run tsc:w\" \"npm run gulpDev\" \"npm run server-dev\"  ",
     "server": "node server/index.js",
-    "server-dev": "node-dev server/index.js",
+    "server-dev": "node_modules/.bin/node-dev server/index.js",
     "gulpDev": "node_modules/.bin/gulp",
     "lite": "lite-server",
     "_postinstall": "typings install",
@@ -36,6 +35,7 @@
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.6",
+    "colors": "^1.1.2",
     "concurrently": "^2.2.0",
     "core-js": "^2.4.1",
     "dateformat": "^2.0.0",
@@ -47,6 +47,7 @@
     "merge-stream": "^1.0.1",
     "mysql": "^2.12.0",
     "ng2-translate": "^5.0.0",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
