--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/common": "^5.0.0-rc.1",
+    "@angular/compiler": "^5.0.0-rc.1",
+    "@angular/core": "^5.0.0-rc.1",
+    "@angular/forms": "^5.0.0-rc.1",
+    "@angular/http": "^5.0.0-rc.1",
+    "@angular/platform-browser": "^5.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^5.0.0-rc.1",
+    "@angular/router": "^5.0.0-rc.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "@types/node": "^7.0.5",
