--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,19 +3,22 @@
     "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
-    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
     "rootDir": "./src",
-    "outDir": "dist/"
+    "outDir": "dist/",
+    "typeRoots" : ["./typings"]
 
   },
+  "filesGlob": [
+    "./src/types.d.ts",
+    "!./node_modules/**/*.ts"
+  ],
   "exclude": [
     "dist",
-    "wwwroot",
     "@angular",
+    "**/node_modules/*",
     "./node_modules/*",
     "node_modules",
     "server"
