--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "zone.js": "0.7.4"
   },
   "devDependencies": {
+    "@angular/animations": "^5.2.10",
     "@types/node": "^7.0.61",
     "async": "^2.0.1",
     "chai": "^3.5.0",
