--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "express-fileupload": "0.0.5",
     "firebase": "^3.6.6",
     "form-data": "^2.1.2",
+    "i": "^0.3.6",
     "jimp": "^0.2.27",
     "livereload": "^0.7.0",
+    "mapbox-gl": "^0.35.0",
     "merge-stream": "^1.0.1",
     "mysql": "^2.16.0",
     "ng2-translate": "^5.0.0",
+    "npm": "^6.3.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
     "rxjs": "^5.0.3",
