--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "systemjs-plugin-css": "^0.1.32",
     "xml2js": "^0.4.17",
     "xmlbuilder": "^8.2.2",
-    "zone.js": "0.7.4"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@types/node": "^7.0.61",
