--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "atlas-angular2",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\" \"npm run tsc:w\" ",
+    "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\" \"npm run tsc:w\"  \"npm run tsc-be:w\"",
     "server": "node server/index.js",
     "server-dev": "node-dev server/index.js",
     "gulpDev": "node_modules/.bin/gulp",
     "lite": "lite-server",
-    "tsc": "tsc --project tsconfig.json",
+    "tsc": "tsc --project tsconfig-ui.json",
     "tsc:w": "tsc -w --project tsconfig-ui.json",
     "tsc-be:w": "tsc -w --project tsconfig-be.json",
     "typings": "typings"
