--- a/tsconfig-ui.json
+++ b/tsconfig-ui.json
@@ -1,4 +1,5 @@
 {
+  "extends": "tsconfig.json",
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
@@ -14,6 +15,9 @@
   "filesGlob": [
     "./src/types.d.ts",
     "!./node_modules/**/*.ts"
+  ],
+  "include": [
+    "src/**/*"
   ],
   "exclude": [
     "dist",
