--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "cli": "ng serve",
+    "build:brod": "ng build --prod",
     "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\" \"npm run tsc-ui:w\"  \"npm run tsc-be:w\"",
     "server": "tsc --project tsconfig-be.json && node server/index.js",
     "server-dev": "concurrently \"npm run tsc-be:w\" \"npm run node-dev\" ",
