--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atlas-angular2",
   "version": "1.0.0",
   "scripts": {
-    "cli": "ng serve",
+    "cli": "ng serve --deploy-url= --base-href=.",
     "build:brod": "ng build --prod",
     "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\" \"npm run tsc-ui:w\"  \"npm run tsc-be:w\"",
     "server": "tsc --project tsconfig-be.json && node server/index.js",
