--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "atlas-angular2",
   "version": "1.0.0",
   "scripts": {
-    "cli": "ng serve --deploy-url= --base-href=.",
+    "start-ui": "ng serve --deploy-url= --base-href=. --open",
     "build:brod": "ng build --prod",
-    "start": "concurrently  \"npm run gulpDev\" \"npm run server-dev\" \"npm run tsc-ui:w\"  \"npm run tsc-be:w\"",
+    "start": "concurrently   \"npm run server-dev\" \"npm run tsc-be:w\"  \"npm run start-ui\" ",
     "server": "tsc --project tsconfig-be.json && node server/index.js",
     "server-dev": "concurrently \"npm run tsc-be:w\" \"npm run node-dev\" ",
-    "node-dev": "node-dev server/index.js",
-    "gulpDev": "node_modules/.bin/gulp",
     "lite": "lite-server",
-    "tsc-ui": "tsc --project tsconfig-ui.json",
-    "tsc-ui:w": "tsc -w --project tsconfig-ui.json",
     "tsc-be:w": "tsc -w --project tsconfig-be.json",
     "typings": "typings"
   },
@@ -82,11 +78,6 @@
     "es6-promise": "^3.2.1",
     "express-livereload": "0.0.24",
     "gulp": "^3.9.1",
-    "gulp-jade": "^1.1.0",
-    "gulp-less": "^3.3.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-plumber-notifier": "0.0.3",
-    "gulp-sync": "^0.1.4",
     "inquirer": "^1.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
