--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "example": {
-      "root": "src",
+      "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
