--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,14 @@
             "scripts": []
           },
           "configurations": {
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -68,6 +76,10 @@
           "configurations": {
             "production": {
               "browserTarget": "example:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "example:build:hmr"
             }
           }
         },
