--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start-ui": "ng serve --deploy-url= --base-href=. --open",
+    "start-ui-hmr": "ng serve --configuration hmr --deploy-url= --base-href=. --open",
     "dev": "concurrently \"npm run start-ui\" \"npm run server-dev\" ",
     "build:brod": "ng build --prod",
     "start": "concurrently   \"npm run server-dev\" \"npm run tsc-be:w\"  \"npm run start-ui\" ",
@@ -69,9 +70,11 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.2.0",
+    "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "acorn": "^7.1.0",
     "async": "^2.0.1",
     "chai": "^3.5.0",
     "codelyzer": "~4.5.0",
