--- a/tsconfig-ui.json
+++ b/tsconfig-ui.json
@@ -10,7 +10,8 @@
     "rootDir": "./",
     "outDir": "dist/",
     "baseUrl": "./",
-    "typeRoots" : ["./src/@types"]
+    "typeRoots" : ["./src/@types"],
+    "types": ["node"]
 
   },
   "filesGlob": [
