--- a/package.json
+++ b/package.json
@@ -46,13 +46,11 @@
     "i": "^0.3.6",
     "jimp": "^0.2.27",
     "less-loader": "^5.0.0",
-    "livereload": "^0.7.0",
     "mapbox-gl": "^0.35.0",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "mysql": "^2.16.0",
     "ng2-translate": "^5.0.0",
-    "npm": "^6.3.0",
     "postcss-loader": "^3.0.0",
     "ramda": "^0.22.1",
     "reflect-metadata": "^0.1.6",
@@ -64,14 +62,15 @@
     "systemjs": "^0.19.40",
     "systemjs-plugin-css": "^0.1.32",
     "tslib": "^1.9.0",
-    "webpack-dev-server": "^3.10.1",
+    "webpack": "^4.41.6",
+    "webpack-dev-server": "^3.10.3",
     "xml2js": "^0.4.17",
     "xmlbuilder": "^8.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.6",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
@@ -83,10 +82,7 @@
     "chai": "^3.5.0",
     "codelyzer": "~4.5.0",
     "concurrently": "^2.0.0",
-    "connect-livereload": "^0.6.0",
     "es6-promise": "^3.2.1",
-    "express-livereload": "0.0.24",
-    "gulp": "^3.9.1",
     "inquirer": "^1.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -113,7 +109,6 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2",
     "typings": "^1.0.4",
-    "webpack": "^4.41.5",
     "yadda": "^0.17.10"
   }
 }
