--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
+    "@types/express": "^4.17.6",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "acorn": "^7.1.0",
     "async": "^2.0.1",
     "chai": "^3.5.0",
