restore update lng lat

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "aes-js": "^3.1.0",
-    "angular-cli": "^1.0.0-beta.28.3",
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
     "body-parser": "^1.16.0",
@@ -45,6 +44,7 @@
     "form-data": "^2.1.2",
     "i": "^0.3.6",
     "jimp": "^0.2.27",
+    "less": "^3.11.3",
     "less-loader": "^5.0.0",
     "mapbox-gl": "^0.35.0",
     "merge-stream": "^1.0.1",
