--- a/package.json
+++ b/package.json
@@ -16,100 +16,101 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "aes-js": "^3.1.0",
+    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular/animations": "~10.1.6",
+    "@angular/cli": "~10.1.7",
+    "@angular/common": "~10.1.6",
+    "@angular/compiler": "~10.1.6",
+    "@angular/compiler-cli": "~10.1.6",
+    "@angular/core": "~10.1.6",
+    "@angular/forms": "~10.1.6",
+    "@angular/language-service": "~7.2.0",
+    "@angular/platform-browser": "~10.1.6",
+    "@angular/platform-browser-dynamic": "~10.1.6",
+    "@angular/router": "~10.1.6",
+    "@angularclass/hmr": "^2.1.3",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "@types/express": "^4.17.6",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.19.14",
+    "@types/ramda": "^0.27.34",
+    "@types/socket.io-client": "^1.4.35",
+    "acorn": "^7.1.0",
+    "aes-js": "^3.1.2",
     "angular2-translate": "^5.2.0",
     "angularfire2": "^2.0.0-beta.7",
+    "async": "^2.0.1",
     "body-parser": "^1.16.0",
     "bootstrap": "^3.3.6",
+    "chai": "^3.5.0",
+    "codelyzer": "^6.0.0",
     "concurrently": "^2.2.0",
     "core-js": "^2.5.4",
-    "dateformat": "^2.0.0",
+    "dateformat": "^4.4.1",
+    "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
     "firebase": "^3.6.6",
     "form-data": "^2.1.2",
+    "graceful-fs": "^4.1.10",
     "i": "^0.3.6",
+    "inquirer": "^1.1.3",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "jimp": "^0.2.27",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "keysim": "^2.0.0",
     "less": "^3.11.3",
     "less-loader": "^5.0.0",
+    "lite-server": "^2.2.0",
     "mapbox-gl": "^0.35.0",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "mysql": "^2.16.0",
-    "ng2-translate": "^5.0.0",
-    "postcss-loader": "^3.0.0",
-    "ramda": "^0.22.1",
-    "reflect-metadata": "^0.1.6",
-    "rxjs": "~6.3.3",
-    "rxjs-compat": "^6.5.2",
-    "socket.io": "^1.7.4",
-    "socket.io-client": "^1.7.1",
-    "socket.io-stream": "^0.9.1",
-    "systemjs": "^0.19.40",
-    "systemjs-plugin-css": "^0.1.32",
-    "tslib": "^1.9.0",
-    "webpack": "^4.41.6",
-    "webpack-dev-server": "^3.10.3",
-    "xml2js": "^0.4.17",
-    "xmlbuilder": "^8.2.2",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.2.0",
-    "@angularclass/hmr": "^2.1.3",
-    "@types/express": "^4.17.6",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
-    "acorn": "^7.1.0",
-    "async": "^2.0.1",
-    "chai": "^3.5.0",
-    "codelyzer": "~4.5.0",
-    "concurrently": "^2.0.0",
-    "es6-promise": "^3.2.1",
-    "inquirer": "^1.1.3",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "keysim": "^2.0.0",
-    "lite-server": "^2.2.0",
     "minimist": "^1.2.0",
     "mocha": "^3.2.0",
+    "mysql": "^2.16.0",
     "needle": "^1.0.0",
+    "ng2-translate": "^5.0.0",
     "nightmare": "^2.5.2",
     "node-dev": "^3.1.3",
     "pg": "^4.5.5",
     "pg-monitor": "^0.5.5",
     "pg-promise": "^4.3.5",
+    "postcss-loader": "^3.0.0",
     "prompt": "^1.0.0",
-    "protractor": "~5.4.0",
-    "ramda": "^0.22.1",
-    "reflect-metadata": "^0.1.9",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
+    "protractor": "~7.0.0",
+    "ramda": "^0.27.1",
+    "reflect-metadata": "^0.1.6",
+    "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.5.2",
+    "socket.io": "^1.7.4",
+    "socket.io-client": "^2.4.0",
+    "socket.io-stream": "^0.9.1",
+    "systemjs": "^0.19.40",
+    "systemjs-plugin-css": "^0.1.32",
+    "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2",
     "typings": "^1.0.4",
-    "yadda": "^0.17.10"
+    "webpack": "^4.41.6",
+    "webpack-dev-server": "^3.10.3",
+    "xml2js": "^0.4.17",
+    "xmlbuilder": "^8.2.2",
+    "yadda": "^0.17.10",
+    "zone.js": "~0.10.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "constants": false,
+    "stream": false
   }
 }
