--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@angularclass/hmr": "^2.1.3",
+    "@ngrx/component-store": "^10.1.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/express": "^4.17.6",
