--- a/angular.json
+++ b/angular.json
@@ -52,16 +52,11 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
-                },
-                {
-                  "replace": "src/environments/environment.less",
-                  "with": "src/environments/environment.prod.less"
                 }
               ],
               "optimization": true,
               "outputHashing": "bundles",
               "sourceMap": true,
-              "extractCss": false,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -74,7 +69,9 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "example:build",
-            "proxyConfig": "proxy.conf.js"
+            "proxyConfig": "proxy.conf.js",
+            "baseHref": "/",
+            "deployUrl" : ""
           },
           "configurations": {
             "production": {
