--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atlas-angular2",
   "version": "1.0.0",
   "scripts": {
-    "start-ui": "ng serve --deploy-url= --base-href=. --open",
+    "start-ui": "ng serve --open",
     "start-ui-hmr": "ng serve --configuration hmr --deploy-url= --base-href=. --open",
     "dev": "concurrently \"npm run start-ui\" \"npm run server-dev\" ",
     "build:brod": "ng build --prod",
@@ -16,24 +16,24 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
-    "@angular/animations": "~10.1.6",
-    "@angular/cli": "~10.1.7",
-    "@angular/common": "~10.1.6",
-    "@angular/compiler": "~10.1.6",
-    "@angular/compiler-cli": "~10.1.6",
-    "@angular/core": "~10.1.6",
-    "@angular/forms": "~10.1.6",
-    "@angular/language-service": "~7.2.0",
-    "@angular/platform-browser": "~10.1.6",
-    "@angular/platform-browser-dynamic": "~14.0.2",
-    "@angular/router": "~10.1.6",
+    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular/animations": "~11.2.14",
+    "@angular/cli": "~11.2.19",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/forms": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "@angularclass/hmr": "^2.1.3",
     "@ngrx/component-store": "^10.1.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/express": "^4.17.6",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.14",
     "@types/ramda": "^0.27.34",
@@ -61,7 +61,7 @@
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jimp": "^0.2.27",
-    "karma": "~5.0.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -83,6 +83,7 @@
     "pg": "^4.5.5",
     "pg-monitor": "^0.5.5",
     "pg-promise": "^4.3.5",
+    "postcss": "^8.4.14",
     "postcss-loader": "^3.0.0",
     "prompt": "^1.0.0",
     "protractor": "~7.0.0",
@@ -115,6 +116,7 @@
     "stream": false
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1102.18",
     "@types/dateformat": "^5.0.0",
     "@types/mysql": "^2.15.21"
   }
